--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Mango"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TemanBaca"
@@ -42,6 +42,11 @@
             android:name=".AsesmenSukuKata"
             android:theme="@style/Theme.TemanBaca.Fullscreen"
             android:exported="true"/>
+        <activity
+            android:name=".AsesmenKata"
+            android:theme="@style/Theme.TemanBaca.Fullscreen"
+            android:exported="true"/>
+
 
     </application>
 
